src/main/java/com/example/MyBookShopApp/errors/BookshopWrongParameterException.java
package com.example.MyBookShopApp.errors;

public class BookshopWrongParameterException extends Exception {
    public BookshopWrongParameterException(String message) {
        super(message);
    }
}
